--- a/stylesheets/mine_sweeper.css
+++ b/stylesheets/mine_sweeper.css
@@ -31,6 +31,12 @@ span {
   background: red;
 }
 
+.bomb {
+  background: url('../images/bomb_img.jpg') no-repeat center center;
+  background-size: cover;
+  border: 4px solid red;
+}
+
 #game-div {
 
 }
