--- a/stylesheets/mine_sweeper.css
+++ b/stylesheets/mine_sweeper.css
@@ -11,8 +11,8 @@ table {
 }
 
 td {
-  width: 35px;
-  height: 35px;
+  width: 25px;
+  height: 25px;
   border: 1px solid black;
   padding: 0px;
   margin: 0px;
@@ -21,7 +21,7 @@ td {
 
 span {
   color: red;
-  font-size: 1.5em;
+  font-size: 1.3em;
   visibility: hidden;
 }
 
@@ -51,12 +51,28 @@ span {
 
 .number {
   position: fixed;
-  top: 50%;
-  left: 50%;
-  font-size: 8em;
-  margin-top: 0px;
+  top: 40%;
+  left: 45%;
+  font-size: 12em;
+  margin: 0px;
   font-weight: 600;
   color: red;
+}
+
+.retry {
+    padding: 10px 20px 10px 20px;
+    background-color: red;
+    border-radius: 10px;
+    position: fixed;
+    left: 43%;
+    bottom: 0;
+    text-decoration: none;
+    font-size: 2em;
+    opacity: .5;
+}
+
+.retry:hover {
+  opacity: 1;
 }
 
 #game-div {
